log
Fri, Apr 18, 2025  9:54:09 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  9:54:37 PM: 
 tests:  0|6
total_score: 0/70
645aac5
Fri, Apr 18, 2025  9:59:47 PM: 
 hashmap.c | 68 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 64 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
190b340
